WIP - Add openapi, dao, api-route
